implemented M48
